// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Library test suite Borrow book suite test Should borrow book and set available to false 1`] = `
Map {
  Book {
    "author": "Test author One",
    "id": 1,
    "title": "Test title One",
    "year": 1992,
  } => false,
}
`;

exports[`Library test suite Borrow book suite test Should borrow book and set available to false 2`] = `
Map {
  Book {
    "author": "Test author One",
    "id": 1,
    "title": "Test title One",
    "year": 1992,
  } => false,
}
`;

exports[`Library test suite Borrow book suite test Should create new booking if isn't in bookings  1`] = `
Map {
  User {
    "dueDate": 2023-01-20T11:30:00.000Z,
    "name": "Test user one",
    "penaltyPoints": 0,
    "uuid": "test-uuid",
  } => Booking {
    "booksDueDate": Map {
      Book {
        "author": "Test author One",
        "id": 1,
        "title": "Test title One",
        "year": 1992,
      } => 2023-01-20T11:30:00.000Z,
    },
    "user": User {
      "dueDate": 2023-01-20T11:30:00.000Z,
      "name": "Test user one",
      "penaltyPoints": 0,
      "uuid": "test-uuid",
    },
  },
}
`;

exports[`Library test suite Borrow book suite test Should create new booking if isn't in bookings  2`] = `
Map {
  User {
    "dueDate": 2023-01-20T11:30:00.000Z,
    "name": "Test user one",
    "penaltyPoints": 0,
    "uuid": "test-uuid",
  } => Booking {
    "booksDueDate": Map {
      Book {
        "author": "Test author One",
        "id": 1,
        "title": "Test title One",
        "year": 1992,
      } => 2023-01-20T11:30:00.000Z,
    },
    "user": User {
      "dueDate": 2023-01-20T11:30:00.000Z,
      "name": "Test user one",
      "penaltyPoints": 0,
      "uuid": "test-uuid",
    },
  },
}
`;

exports[`Library test suite Delete book test suite Should delete book properly 1`] = `Map {}`;

exports[`Library test suite Delete book test suite Should delete book properly 2`] = `Map {}`;

exports[`Library test suite Delete book test suite Should throw an LibraryError if book isn't in library 1`] = `Map {}`;

exports[`Library test suite Return book suite test Should return book properly and set to be available in library 1`] = `
Map {
  Book {
    "author": "Test author One",
    "id": 1,
    "title": "Test title One",
    "year": 1992,
  } => true,
}
`;

exports[`Library test suite Return book suite test Should throw an LibraryError on return wrong book 1`] = `
Map {
  Book {
    "author": "Test author One",
    "id": 1,
    "title": "Test title One",
    "year": 1992,
  } => false,
}
`;

exports[`Library test suite Return book suite test Should throw an LibraryError on return wrong book 2`] = `
Map {
  Book {
    "author": "Test author One",
    "id": 1,
    "title": "Test title One",
    "year": 1992,
  } => false,
}
`;

exports[`Library test suite Should add book properly 1`] = `
Map {
  Book {
    "author": "Test author One",
    "id": 1,
    "title": "Test title One",
    "year": 1992,
  } => true,
}
`;

exports[`Library test suite Should add book properly 2`] = `
Map {
  Book {
    "author": "Test author One",
    "id": 1,
    "title": "Test title One",
    "year": 1992,
  } => true,
}
`;
